Fix horizontal alignment

--- a/css/_pagination.scss
+++ b/css/_pagination.scss
@@ -46,7 +46,7 @@
   display: inline-block;
   padding: 10px;
   cursor: pointer;
-  vertical-align: text-top;
+  vertical-align: middle;
   background-color: $white;
   &.disabled {
     cursor: not-allowed;
